--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "2.7.1",
+    "webpack-dev-server": "^3.1.11",
     "webpack-merge": "4.1.0"
   }
 }
