--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
+    "babel-jest": "^24.8.0",
     "babel-loader": "7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "1.6.0",
@@ -33,12 +33,12 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "0.1.16",
-    "css-loader": "^0.28.5",
+    "css-loader": "^2.1.1",
     "eslint": "4.5.0",
     "eslint-loader": "1.9.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "2.30.1",
-    "jest": "20.0.4",
+    "jest": "^24.8.0",
     "node-sass": "4.5.3",
     "sass-loader": "6.0.6",
     "style-loader": "^0.18.2",
